--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>dev.yasint</groupId>
-    <artifactId>concurrent-lec-1</artifactId>
+    <artifactId>BSCO-CD</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
